--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,9 @@
     },
     "require": {
         "php": ">=7.1.0"
+    },
+    "scripts": {
+        "post-install-cmd": ["PerspectiveSimulator\\API::installAPI"],
+        "post-update-cmd": ["PerspectiveSimulator\\API::installAPI"]
     }
 }
