--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         "files": ["autoload.php"]
     },
     "require": {
-        "php": ">=7.1.0"
+        "php": ">=7.1.0",
+        "phpunit/phpunit": "^7"
     }
 }
