--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,6 @@
     "require": {
         "php": ">=7.1.0",
         "phpunit/phpunit": "^7"
-    }
+    },
+    "bin": ["./src/CLI/bin/perspective"]
 }
