--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     },
     "require": {
         "php": ">=7.1.0",
-        "phpunit/phpunit": "^7"
+        "phpunit/phpunit": "^7",
+        "ext-yaml": "*"
     },
     "bin": ["./src/CLI/bin/perspective"]
 }
