--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
     "require": {
         "php": ">=7.1.0",
         "phpunit/phpunit": "^7",
-        "ext-yaml": "*"
+        "ext-yaml": "*",
+        "gettext/gettext": "*"
     },
     "bin": ["./src/CLI/bin/perspective"]
 }
