--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,7 @@
     "require": {
         "php": ">=7.1.0",
         "phpunit/phpunit": "^7",
-        "ext-yaml": "*",
-        "gettext/gettext": "*"
+        "ext-yaml": "*"
     },
     "bin": ["./src/CLI/bin/perspective"]
 }
