--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,9 @@
     },
     "require": {
         "php": ">=7.1.0",
-        "phpunit/phpunit": "^7",
-        "ext-yaml": "*"
+        "ext-yaml": "*",
+        "phpunit/phpunit": "^7.4",
+        "nikic/fast-route": "^1.3"
     },
     "bin": ["./src/CLI/bin/perspective"]
 }
