--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,10 @@
     },
     "require": {
         "php": ">=7.1.0",
+        "ext-yaml": "*",
         "phpunit/phpunit": "^7",
-        "ext-yaml": "*"
+        "nikic/fast-route": "^1.3",
+        "twig/twig": "^2.0"
     },
     "bin": ["./src/CLI/bin/perspective"]
 }
