--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "Perspective/Simulator",
-    "description": "Perspective simulator.",
+    "name": "perspective/simulator",
+    "description": "Perspective simulator for local development",
     "autoload": {
         "psr-4": {"PerspectiveSimulator\\": "src/"},
         "files": ["autoload.php"]
@@ -8,7 +8,6 @@
     "require": {
         "php": ">=7.1.0",
         "ext-yaml": "*",
-        "phpunit/phpunit": "^7",
         "nikic/fast-route": "^1.3",
         "twig/twig": "^2.0"
     },
