--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,9 @@
         "files": ["autoload.php"]
     },
     "require": {
-        "php": ">=7.1.0",
-        "ext-yaml": "*",
+        "php": ">=7.1.3",
         "nikic/fast-route": "^1.3",
-        "twig/twig": "^2.0"
+        "twig/twig": "^2.0",
+        "symfony/yaml": "^4.2"
     }
 }
