--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,7 @@
         "nikic/fast-route": "^1.3",
         "twig/twig": "^2.0",
         "symfony/yaml": "^4.2"
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
