--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     },
     "require": {
         "php": ">=7.1.3",
-        "perspective/api": "dev-dev",
+        "perspective/api": "dev-master",
         "nikic/fast-route": "^1.3",
         "twig/twig": "^2.0",
         "symfony/yaml": "^4.2"
