--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "perspective/api": "dev-master",
         "nikic/fast-route": "^1.3",
         "twig/twig": "^2.0",
-        "symfony/yaml": "^4.2"
+        "symfony/yaml": "^4.2",
+        "ext-curl": "*"
     },
     "minimum-stability": "dev",
     "prefer-stable": true
