Test to use self signed certs in the simulator.

--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,9 @@
         "symfony/yaml": "^4.2",
         "ext-curl": "*"
     },
+    "suggest": {
+        "openssl": "*"
+    },
     "minimum-stability": "dev",
     "prefer-stable": true
 }
