--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
     "require": {
         "php": ">=7.1.3",
         "perspective/api": "dev-platform",
+        "squizlabs/php_codesniffer": "dev-master",
         "nikic/fast-route": "^1.3",
         "symfony/yaml": "^4.2",
         "ext-curl": "*"
